[tool.poetry]
name = "torchreid"
version = "0.1.0"
description = "A library for deep learning person re-ID in PyTorch, updated to build using poetry"
authors = ["Kaiyang Zhou"]
license = "MIT"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20"
cython = "^0.29"
torch = "^1.13.1"
torchvision = "^0.14"
setuptools = "^67.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"
