[tool.poetry]
name = "torchreid"
version = "0.1.0"
description = "A library for deep learning person re-ID in PyTorch, updated to build using poetry"
authors = ["Kaiyang Zhou"]
license = "MIT"
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
cython = "^0.29"
setuptools = "^67.6.0"
scipy = "^1.10.1"
opencv-python = "^4.7.0.72"
gdown = "^4.6.4"
torch = "^2.0.0"
torchvision = "^0.15.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"
